# discord-assistants

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: bot.rs  main.rs  openai.rs  thread.rs
src/commands/: assistant.rs  image.rs  join_voice.rs  mod.rs  register.rs  reset.rs  tts.rs
src/database/: blob.rs  channels.rs  image.rs  mod.rs  tasks.rs  users.rs
src/tools/: assistant_create.rs  assistant_list.rs  datetime.rs  image.rs  mod.rs  transcribe.rs  tts.rs  web_scrape.rs
tools/: current_date_time.json  image.json  mention.json  task_complete.json  task_create.json  task_list.json  transcribe.json  tts.json  user_info.json  web_to_text.json
